syntax = "proto3";

message MiniProgramLoginRequest{
    string channel = 1;
    string code = 2;
}

message PhoneCodeLoginRequest{
    string phone = 1;
    string code = 2;
}

message EmailCodeLoginRequest{
    string email = 1;
    string code = 2;
}

message PasswordLoginRequest{
    string channel = 1;
    string loginName = 2;
    string password = 3;
}

message LoginResponse {
    string token = 1;
}

service login {
    // 小程序登录
    rpc MiniProgramLogin(MiniProgramLoginRequest) returns(LoginResponse){
    }
    // 手机验证码登录
    rpc PhoneCodeLogin(PhoneCodeLoginRequest) returns(LoginResponse){
    }
    // 邮箱验证码登录
    rpc EmailCodeLogin(EmailCodeLoginRequest) returns(LoginResponse){
    }
    // 密码登录 (手机密码.用户名密码.邮箱密码)
    rpc PasswordLogin(PasswordLoginRequest) returns(LoginResponse){
    }
}

